# SHB

./: db.sqlite3  manage.py  pyproject.toml
shb_project/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
shb_project/common/: message.py  model.py
shb_project/core/migrations/: 0001_initial.py  0002_loaninformation_name.py
shb_project/core/models/: __init__.py  loan_infomation.py
shb_project/loan_infomations/: serializers.py  services.py  urls.py  views.py
