[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["yuiben <njhben123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
django-rest-swagger = "^2.2.0"
drf-spectacular = "^0.24.2"
django-cors-headers = "^3.13.0"
mysqlclient = "^2.1.1"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
